<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productDetailsImageIV"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/kindle"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/productDetailsTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_title_and_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productDetailsColorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walmart"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productDetailsItemIdTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_45333242"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/item_description"/>
        <TextView
            android:id="@+id/productDetailsDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            android:text="@string/long_item_description_with_details"/>
    </LinearLayout>
</ScrollView>
