<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="12dp"
        android:text="@string/welcome_message"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/shop_by_categories"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/electronicsIv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/electronics"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/electronics"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/clothingIv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/clothing"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/clothing"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/beautyIv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/beauty"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/beauty"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/foodIv"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/foods"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/food"/>

        </LinearLayout>
    </GridLayout>

</LinearLayout>